@@ -3467,8 +3467,8 @@ write_configuration_file(const char *fname, or_options_t *options)
     log_notice(LD_CONFIG, "Renaming old configuration file to \"%s\"", fn_tmp);
     if (rename(fname, fn_tmp) < 0) {
       log_warn(LD_FS,
-             "Couldn't rename configuration file \"%s\" to \"%s\": %s",
-             fname, fn_tmp, strerror(errno));
+               "Couldn't rename configuration file \"%s\" to \"%s\": %s",
+               fname, fn_tmp, strerror(errno));
       tor_free(fn_tmp);
       goto err;
     }
